<resources>
    <string name="app_name">Doodhwala</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_save_default">Save Default</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="facebook_app_id">1537479513232095</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="configuration_error">Error: the value of WEB_CLIENT_ID or SERVER_BASE_URL is not  set correctly. This will cause errors when requesting a server auth code.</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="add_address">Press \"+\" to add address.</string>
    <string name="ok_btn">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="logout">LOGOUT</string>
    <string name="logout_message">We\'re not good with break-ups! Are you sure you want to logout?</string>
    <string name="logout_title">Logout?</string>
    <string name="confirm_signin">An account already exists with this e-mail.</string>
    <string name="sign_in">Sign in</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sigh up</string>
    <string name="addresses">Addresses</string>
    <string name="add_addresses">Add Address</string>
    <string name="edit_addresses">Edit Address</string>
    <string name="order_history">Order History</string>
    <string name="filters">Filters</string>
    <string name="save">Save</string>
    <string name="filters_applied">Filters Applied</string>
    <string name="hint_flat_or_house_number">Flat/House Number</string>
    <string name="hint_building_or_society_name">Building/Society Name</string>
    <string name="hint_street_details">Street Details</string>
    <string name="hint_landmarks">Landmarks</string>
    <string name="hint_pincode">Pin code</string>
    <string name="please_enter_flat_or_house_number">Please enter Flat/House Number</string>
    <string name="please_enter_building_or_society_name">Please enter Building/Society Name</string>
    <string name="please_enter_street_details">Please enter Street Details</string>
    <string name="please_enter_landmarks">Please enter Landmarks</string>
    <string name="please_enter_pincode">Please enter Pincode</string>
    <string name="new_address_added_successfully">New address added successfully.</string>
    <string name="address_updated_successfully">Address updated successfully.</string>
    <string name="default_address_updated_successfully">Default Address updated successfully.</string>

    <string name="deliver_at">Deliver at:</string>
    <string name="deliver_at_default">Deliver at: Add your delivery address</string>
    <string name="edit">Edit</string>
    <string name="tomorrow">Deliveries for Tomorrow</string>
    <string name="today">Today</string>
    <string name="order_history_balance">Balance: </string>
    <string name="previous_day">Previous Day</string>
    <string name="next_day">Next Day</string>
    <string name="do_you_want_to_pause_the_plan">Do you want to pause the plan</string>
    <string name="do_you_want_to_resume_the_plan">Do you want to resume the plan</string>
    <string name="pause">Pause</string>
    <string name="active">Active</string>
    <string name="resume">Resume</string>
    <string name="paused">Paused</string>
    <string name="view_plan">View Plan</string>
    <string name="change_plan">Change Plan</string>
    <string name="edit_plan">Edit Plan</string>

    <string name="agreement">By continuing, I agree to Doodhwalla\'s</string>
    <string name="Terms"><u>Terms and Condition</u></string>
    <string name="policy"><u>Private Policy</u></string>


    <string-array name="Qty">
        <item>One packet</item>
        <item>Two packets</item>
        <item>Three packets</item>
        <item>Four packets</item>
        <item>Five packets</item>
        <item>Six packets</item>
        <item>Seven packets</item>
        <item>Eight packets</item>
        <item>Nine packets</item>
        <item>Ten packets</item>
        <item>Eleven packets</item>
        <item>Twelve packets</item>
        <item>Thirteen packets</item>
        <item>Fourteen packets</item>
        <item>Fifteen packets</item>
        <item>Sixteen packets</item>
        <item>Seventeen packets</item>
        <item>Eighteen packets</item>
        <item>Nineteen packets</item>
        <item>Twenty packets</item>
        <item>Twenty-one packets</item>
        <item>Twenty-two packets</item>
        <item>Twenty-three packets</item>
        <item>Twenty-four packets</item>
        <item>Twenty-five packets</item>
        <item>Twenty-six packets</item>
        <item>Twenty-seven packets</item>
        <item>Twenty-eight packets</item>
        <item>Twenty-nine packets</item>
        <item>Thirty packets</item>
        <item>Thirty-one packets</item>
        <item>Thirty-two packets</item>
        <item>Thirty-three packets</item>
        <item>Thirty-four packets</item>
        <item>Thirty-five packets</item>
        <item>Thirty-six packets</item>
        <item>Thirty-seven packets</item>
        <item>Thirty-eight packets</item>
        <item>Thirty-nine packets</item>
        <item>Forty packets</item>
        <item>Forty-one packets</item>
        <item>Forty-two packets</item>
        <item>Forty-three packets</item>
        <item>Forty-four packets</item>
        <item>Forty-five packets</item>
        <item>Forty-six packets</item>
        <item>Forty-seven packets</item>
        <item>Forty-eight packets</item>
        <item>Forty-nine packets</item>
        <item>Fifty packets</item>
    </string-array>

    <string-array name="DurationName">
    <item>One week</item>
    <item>Two weeks</item>
    <item>Four weeks</item>
    </string-array>

    <string-array name="FreqName">
        <item>Everyday</item>
        <item>Three times a week</item>
        <item>Four times a week</item>
    </string-array>

    <string name="delivery_details">Delivery only to Indiranagar, Domlur, JeevanBhima &amp; Thippasandra</string>
    <string name="referral_text">No more hassles! Choose a plan once and sit back and relax as we ensure you have a wonderful milk experience.</string>

    <string name="friend_discount_text">Friend joins &amp; gets 5% off</string>
    <string name="friend_order_discount_text">3 friends order &amp; you get 20% off</string>
    <string name="delivery_valid">Valid only in Indiranagar, Domlur, JeevanBhima &amp; Thippasandra</string>
</resources>
