<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rlview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/black"
            android:visibility="gone"
            android:text="@string/logout_title"/>

        <TextView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/logout_message"/>


    </RelativeLayout>

    <Button
        android:id="@+id/btn_ok"
        android:layout_below="@+id/rlview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/ripple_blue"
        android:textColor="@color/accentColor"
        android:layout_marginTop="10dp"
        android:text="@string/ok_btn"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_below="@+id/rlview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btn_ok"
        android:background="@drawable/ripple_blue"
        android:textColor="@color/accentColor"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"/>


</RelativeLayout>