<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor="@color/black"
        android:visibility="gone"
        android:text="@string/confirm_signin"/>


    <TextView
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_signin"/>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/ripple_blue"
        android:textColor="@color/accentColor"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in"/>

    <Button
        android:id="@+id/cancel"
        android:layout_toLeftOf="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_blue"
        android:textColor="@color/accentColor"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"/>

        </RelativeLayout>


</RelativeLayout>