<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar_signup" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="10dp">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="20dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:layout_margin="15dp"
            android:textColorHint="@android:color/darker_gray" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="10dp">

        <EditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Mobile"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:drawableLeft="@drawable/ic_phone"
            android:textColorHint="@android:color/darker_gray"
            android:drawablePadding="20dp"
            android:paddingLeft="10dp"
            android:layout_margin="15dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="10dp">

        <EditText
            android:id="@+id/txtEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_mail"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:drawablePadding="20dp"
            android:paddingLeft="10dp"
            android:layout_margin="15dp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="10dp">

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:password="true"
            android:singleLine="true"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_password"
            android:textColorHint="@android:color/darker_gray"
            android:drawablePadding="20dp"
            android:paddingLeft="10dp"
            android:layout_margin="15dp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/agreement"/>

        <RelativeLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/terms_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@drawable/text_color_change_blue_to_black"
            android:text="@string/Terms"/>

        <TextView
            android:id="@+id/and"
            android:layout_toRightOf="@+id/terms_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorSecondaryText"
            android:text=" and "/>

        <TextView
            android:id="@+id/policy"
            android:layout_toRightOf="@+id/and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@drawable/text_color_change_blue_to_black"
            android:text="@string/policy"/>

        </RelativeLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>
